# LiftUpConditional

./: readme.md
cpp/: CMakeLists.txt  README.md
cpp/src/: sample.cpp  sample.h
cpp/test-catch2/: sample_catch.cpp
csharp/: .gitignore  Kata.LiftUpConditional.sln
csharp/src/LiftUpConditional/: ConditionalClass.cs
csharp/tests/LiftUpConditional.Tests/: ConditionalClassLiftUpConditionalShould.cs  LiftUpConditional.Tests.csproj
fsharp/: .gitignore  Kata.LiftUpConditional.sln
fsharp/src/LiftUpConditional/: LiftUpConditional.fs  LiftUpConditional.fsproj
fsharp/tests/LiftUpConditional.Tests/: LiftUpConditional.Tests.fsproj  LiftUpConditionalTests.fs
java/: pom.xml
java/src/main/java/codingdojo/: ConditionalClass.java
java/src/test/java/codingdojo/: ConditionalClassTest.java
ocaml/liftUpConditional/: dune-project  liftUpConditional.opam
ocaml/liftUpConditional/lib/: demo.ml  demo.mli  dune
ocaml/liftUpConditional/test/: dune  liftUpConditional.ml
